added footer block

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <nav>
         <ul>
             <a href="#"><span>About Me</span></a>
-            <a href="#"><span></span>Work</a>
+            <a href="#"><span>Work</span></a>
             <a href="#"><span>Contact Me</span></a>
             <a href="#"><span>Resume</span></a>
         </ul>
@@ -23,19 +23,19 @@
 </header>
 
 <body>
-    <div class="about-me">
+    <section class="">
+    <div class="display" class="about-me">
         <h2>About Me</h2>
-
     </div>
 
-    <div class="Work">
+    <div class="display" class="Work">
         <h2>Work</h2>
     </div>
 
-    <div class="Resume">
+    <div class="display" class="Resume">
         <h2>Resume</h2>
     </div>
-
+</section>
 </body>
 
 <footer>
