--- a/index.html
+++ b/index.html
@@ -12,14 +12,15 @@
 
 <header>
     <h1>Amanda</h1>
-    <nav>
+    <section class="navigation-bar">
+        <img src="./assets/images/IMG_2275_original.jpg" alt="Photo of Amanda">
         <ul>
             <a href="#"><span>About Me</span></a>
             <a href="#"><span>Work</span></a>
             <a href="#"><span>Contact Me</span></a>
             <a href="#"><span>Resume</span></a>
         </ul>
-    </nav>
+    </section>
 </header>
 
 <body>
