--- a/index.html
+++ b/index.html
@@ -11,9 +11,8 @@
 </head>
 
 <header>
-    <h1>Amanda</h1>
+    <h1 class="nametag">Amanda</h1>
     <section class="navigation-bar">
-        <img src="./assets/images/IMG_2275_original.jpg" alt="Photo of Amanda">
         <ul>
             <a href="#"><span>About Me</span></a>
             <a href="#"><span>Work</span></a>
@@ -25,17 +24,19 @@
 
 <body>
     <section class="">
-    <div class="display" class="about-me">
-        <h2>About Me</h2>
-    </div>
+    <img class="container" src="./assets/images/IMG_2275_original.jpg" alt="Photo of Amanda">
+        <div class="display" class="about-me">
+            <h2>About Me</h2>
+        </div>
 
-    <div class="display" class="Work">
-        <h2>Work</h2>
-    </div>
+        <div class="display" class="work">
+            <h2>Work</h2>
+        </div>
 
-    <div class="display" class="Resume">
-        <h2>Resume</h2>
-    </div>
+        <div class="display" class="resume">
+            <h2>Resume</h2>
+        </div>
+
 </section>
 </body>
 
