navigation bar changes

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 </header>
 
 <body>
-    <section class="">
     <img class="container" src="./assets/images/IMG_2275_original.jpg" alt="Photo of Amanda">
+    <section class="part">
         <div class="display" class="about-me">
             <h2>About Me</h2>
         </div>
@@ -36,8 +36,7 @@
         <div class="display" class="resume">
             <h2>Resume</h2>
         </div>
-
-</section>
+    </section>
 </body>
 
 <footer>
