--- a/index.html
+++ b/index.html
@@ -12,29 +12,34 @@
 
 <header>
     <h1 class="nametag">Amanda</h1>
-    <section class="navigation-bar">
+    <div class="navigation-bar">
         <ul>
             <a href="#"><span>About Me</span></a>
             <a href="#"><span>Work</span></a>
             <a href="#"><span>Contact Me</span></a>
             <a href="#"><span>Resume</span></a>
         </ul>
-    </section>
+    </div>
 </header>
+
+<div><img class=bookcase src="./assets/images/bookcase.jpeg" alt="Bookcase/ Reading nook"></div>
 
 <body>
     <img class="container" src="./assets/images/IMG_2275_original.jpg" alt="Photo of Amanda">
     <section class="part">
-        <div class="display" class="about-me">
+        <div class="display" id="about-me">
             <h2>About Me</h2>
+            <p>Hi, my name is Amanda Lee and I recently moved from Hawaii to Seattle, Washington. I am studying at SMU bootcamp to become a future developer and I am excited to see what the future holds.</p>
         </div>
 
-        <div class="display" class="work">
+        <div class="display" id="work">
             <h2>Work</h2>
+            <p> </p>
         </div>
 
-        <div class="display" class="resume">
+        <div class="display" id="resume">
             <h2>Resume</h2>
+            <p> </p>
         </div>
     </section>
 </body>
