added smooth scrolling

--- a/index.html
+++ b/index.html
@@ -15,10 +15,9 @@
         Amanda
     </h1>
         <ul>
-            <a href="#"><span>About Me</span></a>
-            <a href="#"><span>Work</span></a>
-            <a href="#"><span>Contact Me</span></a>
-            <a href="#"><span>Resume</span></a>
+            <a href="#about-me">About Me</a>
+            <a href="#work">Work</a>
+            <a href="#contact-me">Contact Me</a>
         </ul>
 </header>
 
@@ -34,15 +33,15 @@
     <!--Short introduction-->
     <article>
 
-        <div class="title">
+        <div class="title" id="about-me">
             <h2>
                 About Me
             </h2>
         </div>
             <div class="display">
                 <p>
-                    Hi, my name is Amanda Lee and I recently moved from Hawaii to Seattle, Washington.
-                    I am studying at SMU bootcamp to become a future developer and I am excited to see what the future holds!
+                    Aloha! My name is Amanda Lee and I recently moved from Hawaii to Seattle, Washington.
+                    I am studying at SMU bootcamp to become a future web developer and I am excited to see what the future holds!
                 </p>
             </div>
     </article>
@@ -50,36 +49,43 @@
     <!--Includes screenshots of previous work-->  
     <article>
 
-        <div class="title">
+        <div class="title" id="work">
             <h2>
                 Work
             </h2>
         </div>
         
         <section class="allimages">
-            <div class="workbanner">
+            <div>
                 <img class="banner" src="./assets/images/codingImage.jpeg" alt="Coding Image">
             </div>
-            <div class="workimages" class="imageborder">
+            <div class="workimages">
                 <img class="photo" src="./assets/images/Prework-study-guide.1.png" alt="Screenshot of Prework Guide Code pt.1">
                 <img class="photo" src="./assets/images/Prework-study-guide.2.png" alt="Screenshot of Prework Guide Code pt.2">
             </div>
-            <div class="workimages" class="imageborder">
+            <div class="workimages">
                 <img class="photo" src="./assets/images/Challenge-1-screenshot.1.png" alt="Screenshot of Challenge 1 pt.1">
                 <img class="photo" src="./assets/images/Challenge-1-screenshot.2.png" alt="Screenshot of Challenge 2 pt.1">
             </div>
         </section>
 
-      </article>
+    </article>
 
     </section>
 </body>
 
 <!--Contact Information-->
 <footer>
+
+    <div id="contact-me">
+        </div>
+    <p id="email">
+        Email: leeandama87@gmail.com
+    </p>
     <h3>
         Contact Me
     </h3>
+
 </footer>
 
 </html>
