added about me textbox

--- a/index.html
+++ b/index.html
@@ -39,14 +39,16 @@
             </h2>
         </div>
             <div class="display">
+                <div id="shadowbox">
                 <p>
                     Aloha! My name is Amanda Lee and I recently moved from Hawaii to Seattle, Washington.
-                    I am studying at SMU bootcamp to become a future web developer and I am excited to see what the future holds!
+                    I am studying at <a href=https://techbootcamps.smu.edu/coding>SMU</a> to become a future web developer and I am excited to see what the future holds!
                 </p>
+                </div>
             </div>
     </article>
 
-    <!--Includes screenshots of previous work-->  
+    <!--Screenshots and links to previous work-->  
     <article>
 
         <div class="title" id="work">
@@ -55,6 +57,7 @@
             </h2>
         </div>
         
+        <!--create focus attribute and link to projects-->
         <section class="allimages">
             <div>
                 <img class="banner" src="./assets/images/codingImage.jpeg" alt="Coding Image">
@@ -80,7 +83,8 @@
     <div id="contact-me">
         </div>
     <p id="email">
-        Email: leeandama87@gmail.com
+        Email: leeandama87@gmail.com </br>
+        Number: (808)398-5307
     </p>
     <h3>
         Contact Me
