added to README

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             </div>
     </article>
 
-    <!--Screenshots and links to previous work-->  
+
     <article>
 
         <div class="title" id="work">
@@ -56,14 +56,18 @@
                 Work
             </h2>
         </div>
-        
-        <!--create focus attribute and link to projects-->
+
+        <!--Screenshots and links to previous work-->  
+        <!--Create focus attribute and link to projects-->
         <section class="allimages">
             <div>
-                <img class="banner" src="./assets/images/codingImage.jpeg" alt="Coding Image">
+                    <img class="banner" src="./assets/images/codingImage.jpeg" alt="Coding Image">
             </div>
             <div class="workimages">
+        <!--Link changes the size of image when it img is inside a element; need to fix-->
+                <a href="https://amandagl1.github.io/prework-study-guide/"></a>
                 <img class="photo" src="./assets/images/Prework-study-guide.1.png" alt="Screenshot of Prework Guide Code pt.1">
+                <a href="https://amandagl1.github.io/prework-study-guide/"></a>
                 <img class="photo" src="./assets/images/Prework-study-guide.2.png" alt="Screenshot of Prework Guide Code pt.2">
             </div>
             <div class="workimages">
