added links to challenge 1

--- a/index.html
+++ b/index.html
@@ -71,7 +71,9 @@
                 <img class="photo" src="./assets/images/Prework-study-guide.2.png" alt="Screenshot of Prework Guide Code pt.2">
             </div>
             <div class="workimages">
+                <a href="https://amandagl1.github.io/Challenge-1-Horiseon/"></a>
                 <img class="photo" src="./assets/images/Challenge-1-screenshot.1.png" alt="Screenshot of Challenge 1 pt.1">
+                <a href="https://amandagl1.github.io/Challenge-1-Horiseon/"></a>
                 <img class="photo" src="./assets/images/Challenge-1-screenshot.2.png" alt="Screenshot of Challenge 2 pt.1">
             </div>
         </section>
