Added Project 1 to 'Work' section.

--- a/index.html
+++ b/index.html
@@ -21,11 +21,13 @@
         </ul>
 </header>
 
-<div>
-    <img id=bookcase src="./assets/images/bookcase.jpeg" alt="Bookcase/Reading nook">
-</div>
-
 <body>
+    <!--Background Image-->
+    <div>
+        <img id=bookcase src="./assets/images/bookcase.jpeg" alt="Bookcase/Reading nook">
+    </div>
+
+
     <!--Recent profile picture-->
     <img id="profile" src="./assets/images/IMG_2275_original.jpg" alt="Photo of Amanda">
     <section class="part">
@@ -65,10 +67,12 @@
             </div>
             <div class="workimages">
         <!--Link changes the size of image when it img is inside a element; need to fix-->
-                <a href="https://amandagl1.github.io/prework-study-guide/"></a>
-                <img class="photo" src="./assets/images/Prework-study-guide.1.png" alt="Screenshot of Prework Guide Code pt.1">
-                <a href="https://amandagl1.github.io/prework-study-guide/"></a>
-                <img class="photo" src="./assets/images/Prework-study-guide.2.png" alt="Screenshot of Prework Guide Code pt.2">
+                <a href="https://github.com/1jessep/moviesthatmoveproject.git">
+                    <img class="photo" src="assets/images/Project-1.png" alt="Screenshot of Project 1">
+                </a>
+                <a href="https://github.com/1jessep/moviesthatmoveproject.git">
+                    <img class="photo" src="assets/images/Project-1.2.png" alt="Screenshot of Project 1">
+                </a>
             </div>
             <div class="workimages">
                 <a href="https://amandagl1.github.io/Challenge-1-Horiseon/"></a>
