--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@
             </div>
             <div class="workimages">
         <!--Link changes the size of image when it img is inside a element; need to fix-->
-                <a href="https://github.com/1jessep/moviesthatmoveproject.git">
+                <a href="https://1jessep.github.io/moviesthatmoveproject/">
                     <img class="photo" src="assets/images/Project-1.png" alt="Screenshot of Project 1">
                 </a>
-                <a href="https://github.com/1jessep/moviesthatmoveproject.git">
+                <a href="https://1jessep.github.io/moviesthatmoveproject/">
                     <img class="photo" src="assets/images/Project-1.2.png" alt="Screenshot of Project 1">
                 </a>
             </div>
