Added new images to webpage. Edited links for projects in 'Work' section.

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <div class="display">
                 <div id="shadowbox">
                 <p>
-                    Aloha! My name is Amanda Lee and I recently moved from Hawaii to Seattle, Washington.
+                    Hi, my name is Amanda Lee and I recently moved from Honolulu, Hawaii to Seattle, Washington.
                     I am studying at <a href=https://techbootcamps.smu.edu/coding>SMU</a> to become a future web developer and I am excited to see what the future holds!
                 </p>
                 </div>
@@ -68,17 +68,19 @@
             <div class="workimages">
         <!--Link changes the size of image when it img is inside a element; need to fix-->
                 <a href="https://1jessep.github.io/moviesthatmoveproject/">
-                    <img class="photo" src="assets/images/Project-1.png" alt="Screenshot of Project 1">
+                    <img class="photo" src="assets/images/Project-1.png" alt="Movies That Move">
                 </a>
                 <a href="https://1jessep.github.io/moviesthatmoveproject/">
-                    <img class="photo" src="assets/images/Project-1.2.png" alt="Screenshot of Project 1">
+                    <img class="photo" src="assets/images/Project-1.2.png" alt="Movies That Move">
                 </a>
             </div>
             <div class="workimages">
-                <a href="https://amandagl1.github.io/Challenge-1-Horiseon/"></a>
-                <img class="photo" src="./assets/images/Challenge-1-screenshot.1.png" alt="Screenshot of Challenge 1 pt.1">
-                <a href="https://amandagl1.github.io/Challenge-1-Horiseon/"></a>
-                <img class="photo" src="./assets/images/Challenge-1-screenshot.2.png" alt="Screenshot of Challenge 2 pt.1">
+                <a href="https://momentum100.herokuapp.com/">
+                    <img class="photo" src="assets/images/momentum.png" alt="Momentum">
+                </a>
+                <a href="https://momentum100.herokuapp.com/">
+                    <img class="photo" src="assets/images/momentum-2.png" alt="Momentum">
+                </a>
             </div>
         </section>
 
@@ -97,7 +99,7 @@
         Number: (808)398-5307
     </p>
     <h3>
-        Contact Me
+        Reach Me Here
     </h3>
 
 </footer>
