Added project 3 screenshots and changed some styling in CSS.

--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
             <div class="display">
                 <div id="shadowbox">
                 <p>
-                    Hi, my name is Amanda Lee and I recently moved from Honolulu, Hawaii to Seattle, Washington.
-                    I am studying at <a href=https://techbootcamps.smu.edu/coding>SMU</a> to become a future web developer and I am excited to see what the future holds!
+                    Hi, my name is Amanda Lee and I am an Alumni from <a href=https://techbootcamps.smu.edu/coding>SMU</a>. 
+                    Checkout my the awesome projects that I have collaborated on with other amazing full-stack web developers.
                 </p>
                 </div>
             </div>
@@ -80,6 +80,14 @@
                 </a>
                 <a href="https://momentum100.herokuapp.com/">
                     <img class="photo" src="assets/images/momentum-2.png" alt="Momentum">
+                </a>
+            </div>
+            <div class="workimages">
+                <a href="https://mojave-store.herokuapp.com/">
+                    <img class="photo" src="assets/images/Mojave.png" alt="Mojave">
+                </a>
+                <a href="https://mojave-store.herokuapp.com/">
+                    <img class="photo" src="assets/images/IMG_2275_original.jpg" alt="Mojave">
                 </a>
             </div>
         </section>
